[package]
name = "simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "mdns", "gossipsub", "noise", "yamux", "macros"] }
tokio = { version = "1.32", features = ["full"] }
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
solana-client = "1.17"
solana-sdk = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8"
base64 = "0.21"
zeroize = "1.6"